the unarchive module fails

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,7 +3,7 @@
 
 wso2_user: wso2
 wso2_group: wso2
-carbon_base: "/opt/wso2/{{wso2_app}}"
+carbon_base: "/opt/{{wso2_app}}-{{wso2_app_version}}"
 carbon_home: "{{carbon_base}}/current"
 unzip_folder: "/tmp"
 
@@ -15,9 +15,14 @@ wso2_default_http_port: 9763
 java_home: "/usr/java/default"
 
 # wso2
-wso2_app: wso2apim
+wso2_app: wso2am
 wso2_app_version: 2.5.0
 wso2_app_directory: "{{wso2_app}}-{{ wso2_app_version }}"
 wso2_app_offset: 0
 wso2_headers: "User-Agent:testuser,Referer:http://connect.wso2.com/wso2/getform/reg/new_product_download"
 wso2_apim_url: "http://product-dist.wso2.com/products/api-manager/{{wso2_app_version}}/wso2am-{{wso2_app_version}}.zip"
+wso2_app_https_port: "{{ (wso2_default_https_port|int) + (wso2_app_offset|int) }}"
+wso2_app_http_port: "{{ (wso2_default_http_port|int) + (wso2_app_offset|int) }}"
+wso2_dir_archive: "/home/{{ wso2_user }}"
+wso2_app_archive: "{{ unzip_folder }}/{{wso2_app}}-{{wso2_app_version}}.zip"
+oracle_driver: "ojdbc7.jar_12.1.0.1.jar"
